# fakedata

./: .gitignore  .npmignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  README.python.md  package.json  pyproject.toml  test.js  test_py.py  user_enhancement_plan.md  user_enhancement_plan2.md  user_enhancement_plan3.md  user_enhancement_plan4.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: ci.yml  node.js.yml  publish.yml
fakedata/: __init__.py  cli.py  core.py  test_python.py
fakedata/helpers/: animal.json  animefact.json  animequote.json  cardtype.json  catfact.json  companies.json  countries.json  domain.json  email.json  first.json  fortune.json  healthcare.json  industries.json  job_categories.json  job_skills.json  job_titles.json  locales.json  pickup.json  quote.json  salary_distributions.json  salary_ranges.json  state.json  universities.json
fakedata/modules/: __init__.py  animals.py  anime.py  data.py  fun.py
helpers/: companies.json  countries.json  dogfact.json  healthcare_extended.json  industries.json  job_categories.json  job_titles.json  joke.json  last.json  middle.json  occupation.json  pokemon.json  salary_ranges.json  shortformstate.json  states.json  street.json  universities.json
newdata/: company.json
src/: cli.js  index.d.ts  index.js
src/modules/: animals.js  anime.js  data.js  fun.js
website/: app.js  data.js  index.html  style.css
website/api/: api.js  index.html  inject.js  style.css
