[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fakedata-python"
version = "2.0.0"
authors = [
  { name="abhay557", email="abhaycormourya@gmail.com" },
]
description = "The fakedata package generates realistic synthetic user profiles for machine learning, deep learning, data analysis, and data science workflows."
readme = "README.md"
license = "MIT"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/abhay557/fakedata"

[tool.setuptools.package-data]
"fakedata.helpers" = ["*.json"]

[tool.setuptools.packages.find]
where = ["."]
include = ["fakedata*"]
